--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#2eb9e7</color>
+    <color name="colorPrimaryDark">#279fc6</color>
     <color name="colorAccent">#FF4081</color>
-
-
+    <color name="colorTransparent">#00ffffff</color>
+    <color name="colorPrimaryLight">#A0D3E6</color>
 
     <!-- Gradient colors -->
     <color name="colorBlueLight">#75d8ef</color>
     <color name="colorBlueDark">#2eb9e7</color>
+
+    <!-- Text colors -->
+    <color name="loginTextColor">#fff</color>
+
+    <!-- Ripple -->
+    <color name="colorRippleFirst">@color/colorPrimary</color>
+    <color name="colorRippleSecond">@color/colorPrimary</color>
 </resources>
