--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -97,10 +97,17 @@
 
     </android.support.design.widget.TextInputLayout>
 
+    <ProgressBar
+        android:id="@+id/progress_bar_register"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
         android:fontFamily="sans-serif-light"
         android:background="@drawable/button_default"
         android:onClick="registerMe"
