--- a/app/src/main/res/layout/list_item_element.xml
+++ b/app/src/main/res/layout/list_item_element.xml
@@ -40,7 +40,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:visibility="gone"
+            android:visibility="visible"
             android:src="@drawable/icon_unfavoritable" />
 
 
